# mlpack-linear-regression-example

./: CMakeLists.txt  README.md  define.h  main.cpp  make_data.cpp
cmake/: FindMLPACK.cmake
